--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -113,17 +113,15 @@
                         {% endif %}
                         <hr class="pma-line-3"/>
 
-                        {% include 'ranking_categoria.html' %}
+                        {#                        {% include 'ranking_categoria.html' %}#}
                     </div>
                     {# chart horizontal bar #}
-                    <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
-                        </div>
-                    </div>
+                    {#                    <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">#}
+                    {#                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal#}
+                    {#                        </div>#}
+                    {#                    </div>#}
 
-                </div>
-                <div class="row">
-                    <div class="col-12 position-relative">
+                    <div class="col-12 position-relative long-margin">
                         <h5 class="title-center-info">Ranking de recaudaci&oacute;n
                             por habitante categor&iacute;a</h5>
                         <h4 class="title-center-category">
@@ -139,6 +137,24 @@
                                 <h1>01</h1>
                             </div>
                             <div class="first-ballon-horn"></div>
+                            <span class="name">MI MUNICIPIO Managua</span>
+                            <span class="number">200.80 M. de C&oacute;rdobas</span>
+                        </div>
+
+                         <div class="balloon-dialog second-balloon-dialog">
+                            <div class="dialog-inside">
+                                <h1>02</h1>
+                            </div>
+                            <div class="second-ballon-horn"></div>
+                            <span class="name">MI MUNICIPIO Managua</span>
+                            <span class="number">200.80 M. de C&oacute;rdobas</span>
+                        </div>
+
+                        <div class="balloon-dialog third-balloon-dialog">
+                            <div class="dialog-inside">
+                                <h1>03</h1>
+                            </div>
+                            <div class="third-ballon-horn"></div>
                             <span class="name">MI MUNICIPIO Managua</span>
                             <span class="number">200.80 M. de C&oacute;rdobas</span>
                         </div>
