--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -113,10 +113,9 @@
                         {% endif %}
                         <hr class="pma-line-3"/>
 
-                        {% include 'ranking_categoria.html' %}
                     </div>
                     {# chart horizontal bar #}
-                    <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
+                    <div class="col-lg-12 col-md-12 col-sm-12 mt-1 height-horizontal-bar">
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
@@ -260,7 +259,7 @@
 		</div>
             {% else %}
 	        <div class="container">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-5 col-md-5 col-sm-12">
                         <h2>
                             <strong>Ranking de recaudaci&oacute;n </strong>
                             <br>
@@ -274,7 +273,7 @@
                                 {% else %}
                                     {{ otros.0.ejecutado_percent|intcomma }}
                                 {% endif %}
-                                Cordobas.
+                                C&oacute;rdobas.
                         </h2>
                         <h5>
                             C&oacute;rdobas corrientes por habitante en base a
@@ -286,13 +285,14 @@
                             {% endif %}
                         </h5>
                         <hr class="pma-line-3"/>
+                    </div>
+		    <div class="col-lg-5 col-md-5 "><img src="/static/images/presupuesto.jpg" alt="rankin" class="img-responsive"/></div>
                         {% include 'ranking_municipio.html' %}
-                    </div>
-                    {# chart horizontal chart #}
-                    <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        {# chart horizontal chart #}
+                        <div class="col-lg-12 col-md-12 col-sm-12 mt-1 height-horizontal-bar">
+                            <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                            </div>
                         </div>
-                    </div>
                 </div>
             {% endif %}
             </div>
@@ -324,8 +324,8 @@
                 </div>
                 <div id="detail-1" class="container">
                     <div class="row">
-                        <div class="col-md-offset-3 col-md-6 table-responsive">
-                            <table class="table table-bordered table-striped pma-bg-white">
+                        <div class="col-md-4 col-md-offset-1 table-responsive">
+                            <table class="table table-bordered table-sm table-striped pma-bg-white">
                                 <thead class="thead-inverse">
                                 <tr class="bg-primary">
                                     <th class="text-center"><strong>Posici&oacute;n</strong></th>
