Cambiando descargar excel por solo descargar

--- a/core/templates/descargar_excel.html
+++ b/core/templates/descargar_excel.html
@@ -3,6 +3,6 @@
     <input type="hidden" name="reporte" value="{{ reporte }}"></button>
     <button type="submit" class="btn btn-success btn-xs" title="Descargar en Excel" name="excel">
       <span class="glyphicon glyphicon-download-alt"></span>
-      <span class="text">Excel</span>
+      <span class="text">Descargar</span>
     </button>
 </form> 
