--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -19,10 +19,10 @@
     min-height: 70px;
 }
 
-/*.height-horizontal-bar {
+.height-horizontal-bar {
     height: 1200px;
     min-height: 700px;
-}*/
+}
 
 .height-horizontal-bar div#bar_horizontal {
     height: 100%;
