--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -47,12 +47,12 @@
             {% for row in rubros %}
                 <tr>
                     {% if periodo_list|keyvalue:year == 'I' and row.inicial_asignado > 0 %}
-                        <td colspan="1">{{ row.subsubtipoingreso__origen__nombre|default:row.sub3tipoingreso__origen__nombre }}</td>
+                        <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}{{ row.sub3tipoingreso__origen__nombre }}</td>
                         <td colspan="1" class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
                         <td colspan="1" class="text-center">{{ row.inicial_asignado_percent }}</td>
                     {% else %}
                         {% if row.ejecutado > 0 %}
-                            <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
+                            <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}{{ row.sub3tipoingreso__origen__nombre }}</td>
                             <td colspan="1" class="text-center">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
                             <td colspan="1" class="text-center">{{ row.ejecutado_percent }}</td>
                         {% endif %}
