--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -305,7 +305,7 @@
                         <hr class="pma-line-3"/>
                     </div>
                 </div>
-                {% include 'semi-dona-municipal.html' %}
+                {% include 'municipal-triangle.html' %}
             {% endif %}
             </div>
 
