--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -1,5 +1,13 @@
 {% load core_extras humanize %}
 <div class="col-12 position-relative" style="height: 450px">
+
+    <h4 class="header-municipal">
+        <span>Municipal "C"</span> ranking de recaudaci&oacute;n por habitante categor&iacute;a
+    </h4>
+
+    <hr class="line-separate pma-line-3">
+
+
     <div class="balloon-dialogue first-balloon-dialogue">
         <div class="position-balloon">
             <span>01</span>
@@ -17,12 +25,12 @@
     <div class="square second-square">
         <span class="name">WIWILI DE JINOTEGA</span>
     </div>
-            <div class="balloon-dialogue third-balloon-dialogue">
-                <div class="position-balloon">
-                    <span>03</span>
-                </div>
-            </div>
-            <div class="square third-square">
-                <span class="name">CORN ISLAND</span>
-            </div>
+    <div class="balloon-dialogue third-balloon-dialogue">
+        <div class="position-balloon">
+            <span>03</span>
+        </div>
+    </div>
+    <div class="square third-square">
+        <span class="name">CORN ISLAND</span>
+    </div>
 </div>
