--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -7,6 +7,9 @@
 
     <hr class="line-separate pma-line-3">
 
+    <h5 class="description-municipal">
+        C&oacute;rdobas corrientes por habitante en base a ingreso ejecutado
+    </h5>
 
     <div class="balloon-dialogue first-balloon-dialogue">
         <div class="position-balloon">
