agregando cantidad de dinero en el grafico de triangulo

--- a/core/static/css/municipal-triangle.css
+++ b/core/static/css/municipal-triangle.css
@@ -80,6 +80,7 @@
 }
 
 .square span {
+    text-align: center;
     color: white;
     white-space: nowrap;
 }
@@ -100,6 +101,9 @@
     left: 7%;
     font-size: 12px;
 }
+
+
+
 
 .first-balloon-dialogue {
     left: calc(var(--left-first-square) + 8%);
