--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -17,8 +17,11 @@
         </div>
     </div>
     <div class="square first-square">
-        <span class="name">MI MUNICIPIO JALAPA</span>
-        <span class="number"></span>
+        <span class="name">
+            MI MUNICIPIO JALAPA
+            <br>
+            200.00 M. de C&oacute;rdobas
+        </span>
     </div>
     <div class="balloon-dialogue second-balloon-dialogue">
         <div class="position-balloon">
@@ -26,7 +29,12 @@
         </div>
     </div>
     <div class="square second-square">
-        <span class="name">WIWILI DE JINOTEGA</span>
+        <span class="name">
+            WIWILI DE JINOTEGA
+            <br>
+            200.00 M. de C&oacute;rdobas
+        </span>
+
     </div>
     <div class="balloon-dialogue third-balloon-dialogue">
         <div class="position-balloon">
@@ -34,6 +42,10 @@
         </div>
     </div>
     <div class="square third-square">
-        <span class="name">CORN ISLAND</span>
+        <span class="name">
+            CORN ISLAND
+            <br>
+            200.00 M. de C&oacute;rdobas
+        </span>
     </div>
 </div>
