--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -12,6 +12,11 @@
     </h5>
 
     <div class="balloon-dialogue first-balloon-dialogue">
+        <strong>
+            {% for letter in 'POSICIÓN'|make_list %}
+                <span>{{ letter }}</span>
+            {% endfor %}
+        </strong>
         <div class="position-balloon">
             <span>01</span>
         </div>
@@ -24,6 +29,11 @@
         </span>
     </div>
     <div class="balloon-dialogue second-balloon-dialogue">
+        <strong>
+            {% for letter in 'POSICIÓN'|make_list %}
+                <span>{{ letter }}</span>
+            {% endfor %}
+        </strong>
         <div class="position-balloon">
             <span>02</span>
         </div>
@@ -34,9 +44,13 @@
             <br>
             200.00 M. de C&oacute;rdobas
         </span>
-
     </div>
     <div class="balloon-dialogue third-balloon-dialogue">
+        <strong>
+            {% for letter in 'POSICIÓN'|make_list %}
+                <span>{{ letter }}</span>
+            {% endfor %}
+        </strong>
         <div class="position-balloon">
             <span>03</span>
         </div>
